inicio do capitulo 5
