# Chapter4/src/swagger.json
@@ -14,6 +14,9 @@
                 "tags": ["Category"],
                 "sumary": "Create a category",
                 "description": "Create a new category",
+                "security": [
+                    { "bearerAuth": []}
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -77,6 +80,9 @@
                 "tags": ["Category"],
                 "summary": "upload a new category",
                 "description": "Upload a new category",
+                "security": [
+                    { "bearerAuth": []}
+                ],
                 "requestBody":{
                     "content":{
                         "multipart/form-data":{
@@ -105,6 +111,9 @@
                 "tags": ["Specifications"],
                 "summary": "Create a specification",
                 "description":"Create a new specification",
+                "security": [
+                    { "bearerAuth": []}
+                ],
                 "requestBody":{
                     "content":{
                         "application/json":{
@@ -123,6 +132,106 @@
                     }
                 }
             }
+        },
+        "/sessions": {
+            "post": {
+                "tags": ["Session"],
+                "summary": "Authentication user",
+                "description": "Authentication user",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema":{
+                                "type": "object",
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Sucess"
+                    },
+                    "400": {
+                        "description": "Email or password incorrect"
+                    }
+                }
+            }
+        },
+        "/cars": {
+            "post": {
+                "tags": ["Cars"],
+                "summary": "Create a new car",
+                "description": "Create a new car",
+                "security": [
+                    { "bearerAuth": []}
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Car"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Category already exist"
+                    }
+                }
+            }
+        },
+        "/cars/image/{id}": {
+            "post": {
+                "tags": ["Cars"],
+                "summary": "Upload image",
+                "description": "Upload image", 
+                "security": [
+                    { "bearerAuth": []}
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Car id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "images": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -135,6 +244,41 @@
                 "description":{
                     "type":"string"
                 }
+            }
+        },
+        "Car": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "daily_rate": {
+                    "type": "number"
+                },
+                "license_plate": {
+                    "type": "string"
+                },
+                "fine_amount": {
+                    "type": "number"
+                },
+                "brand": {
+                    "type": "string"
+                },
+                "category_id": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
             }
         }
     }
