# Chapter4_/src/modules/cars/useCase/listAvailableCars/ListAvailableCarsController.ts
@@ -1,0 +1,22 @@
+import { Request, Response } from "express";
+import { container } from "tsyringe";
+
+import { ListAvailableCarsUseCase } from "./ListAvailableCarsUseCase";
+
+class ListAvailableCarsController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { name, brand, category_id } = request.query;
+
+    const listAvailableCarUseCase = container.resolve(ListAvailableCarsUseCase);
+
+    const cars = await listAvailableCarUseCase.execute({
+      name: name as string,
+      brand: brand as string,
+      category_id: category_id as string,
+    });
+
+    return response.status(200).json(cars);
+  }
+}
+
+export { ListAvailableCarsController };
