# Chapter4_/src/shared/infra/http/routes/index.ts
@@ -1,0 +1,19 @@
+import { Router } from "express";
+
+import { authenticateRoutes } from "./authenticate.routes";
+import { carsRoutes } from "./cars.routes";
+import { categoriesRoutes } from "./categories.routes";
+import { rentalRoutes } from "./rental.routes";
+import { specificationsRoutes } from "./Specifications.routes";
+import { usersRoutes } from "./users.routes";
+
+const router = Router();
+
+router.use("/categories", categoriesRoutes);
+router.use("/specifications", specificationsRoutes);
+router.use("/users", usersRoutes);
+router.use(authenticateRoutes);
+router.use("/cars", carsRoutes);
+router.use("/rentals", rentalRoutes);
+
+export { router };
